Fix the footer static page layout header, text, font sizes, spacing

--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,8 +1,8 @@
 /* Extra small devices (phones, up to 479px) */
 @media screen and (max-width: 479px) {
-  .logo h1 {
+/*  .logo h1 {
     font-size: 2.4em;
-  }
+  }*/
 
   div#hero-banner {
     background-size: initial;
@@ -12,9 +12,9 @@
       top: 80px;
   }
 
-  div.logo h1 {
+/*  div.logo h1 {
     min-height: 138px;
-  }
+  }*/
 
   div.intro-text {
       margin-top: 48px;
@@ -203,13 +203,13 @@
 
 /* Small devices (phones, up to 575px) */
 @media (min-width: 480px) and (max-width: 575px) {
-  .logo h1 {
+/*  .logo h1 {
     font-size: 2.5em;
   }
-
-  div.logo h1 {
+*/
+/*  div.logo h1 {
     min-height: 153px;
-  }
+  }*/
 
   div.intro-text {
       margin-top: 90px;
@@ -254,9 +254,9 @@
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
-  .logo h1 {
+/*  .logo h1 {
     font-size: 3em;
-  }
+  }*/
 
   div.intro-text {
       margin-top: 86px;
@@ -296,9 +296,9 @@
     font-size: 1.3em;
   }
 
-  .logo h1 {
+/*  .logo h1 {
     font-size: 3.2em;
-  }
+  }*/
 
   div.intro-text {
       margin-top: 100px;
@@ -359,9 +359,9 @@
 }
 /* tablets/desktops and up ----------- */
 @media (min-width: 992px) and (max-width: 1223px) {
-  .logo h1 {
+/*  .logo h1 {
       font-size: 3.4em;
-  }
+  }*/
 
   .searchform {
     width: 55%;
@@ -399,9 +399,9 @@
 /* Desktops and laptops ----------- */
 @media only screen and (min-width : 1224px) {
 /* Styles */
-  .logo h1 {
+/*  .logo h1 {
       font-size: 3.1em;
-  }
+  }*/
 
   div.facets .panel {
       padding: 10px 6px;
